@@ -37,134 +37,190 @@ Most likely your environment is already configured to use Java and Maven. Follow
 
 ## Demo 1 - manual
 
-In this demo we will create a Maven based Java application literally from zero and make we will see how easy yet powerful it is.
+In this demo we will create a Maven based Java application literally from zero, and we will see how simple yet powerful it is.
 
 1. Create and navigate to the project folder:
     ```
     md maven-demo-1
     cd maven-demo-1
     ```
-- create a `pom.xml` file
-```
-fsutil file createnew pom.xml 0
-```
-- add empty project
-```xml
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-</project>
-```
-- validate `pom.xml`
-```
-mvn validate
-```
-- add `groupId`, `artifactId` and `version`
-```xml
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>com.wellsfargo</groupId>
-    <artifactId>maven-demo</artifactId>
-    <version>1.0-SNAPSHOT</version>
-</project>
-```
-- validate our `pom.xml` file
-```
-mvn validate
-```
-- let's create a tiny Java application
-```
-md src\main\java\com\wellsfargo
-md src\test\java\com\wellsfargo
-fsutil file createnew src\main\java\com\wellsfargo\App.java 0
-fsutil file createnew src\test\java\com\wellsfargo\AppTest.java 0
-```
-- let's create a test first
-```java
-package com.wellsfargo;
+1. Create an empty `pom.xml` file:
+    ```
+    fsutil file createnew pom.xml 0
+    ```
+1. Stub out a project definition that we will use to describe our project's lifecycle:
+    ```xml
+    <?xml version="1.0" encoding="UTF-8"?>
+    <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+        <modelVersion>4.0.0</modelVersion>
+    </project>
+    ```
+1. Let's see if Maven considers that file valid:
+    ```
+    mvn validate
+    ```
+1. Let's add the required elements, such as `groupId`, `artifactId` and `version`:
+    ```xml
+    <?xml version="1.0" encoding="UTF-8"?>
+        <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+        <modelVersion>4.0.0</modelVersion>
+        <groupId>com.wellsfargo</groupId>
+        <artifactId>maven-demo</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </project>
+    ```
+1. Now the validation will succeed. Run this one more time:
+    ```
+    mvn validate
+    ```
+1. Although we have a complete Maven based application, we have yet to write any code, so let's stub our tiny Java project:
+    ```
+    md src\main\java\com\wellsfargo
+    md src\test\java\com\wellsfargo
+    fsutil file createnew src\main\java\com\wellsfargo\App.java 0
+    fsutil file createnew src\test\java\com\wellsfargo\AppTest.java 0
+    ```
+1. Now we need to add a little bit of Java code to make our application do something. Since we believe in TDD, we will start with a test:
+    ```java
+    package com.wellsfargo;
 
-import static org.junit.Assert.assertTrue;
+    import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import org.junit.Test;
+    import org.junit.jupiter.api.Test;
 
-public class AppTest {
+    public class AppTest {
 
-    @Test
-    public void shouldPass() {
-        assertTrue(true);
+        @Test
+        public void shouldPass() {
+            assertTrue(true);
+        }
+
     }
 
-}
+    ```
+1. For the sake of simplicity, we will go ahead and add the actual implementation right away:
+    ```java
+    package com.wellsfargo;
 
-```
-- and the actual app:
-```java
-package com.wellsfargo;
+    public class App {
 
-public class App {
+        public static void main(String[] args) {
+            System.out.println();
+            System.out.println("+=====================+");
+            System.out.println("| Hello Maven Demo 1! |");
+            System.out.println("+=====================+");
+        }
 
-    public static void main(String[] args) {
-        System.out.println();
-        System.out.println("+=====================+");
-        System.out.println("| Hello Maven Demo 1! |");
-        System.out.println("+=====================+");
     }
 
-}
+    ```
+1. Before we try to run the application, or even run the tests, we want to make sure it compiles. Let's run the following:
+    ```
+    mvn compile
+    ```
+    The compilation most likely (depending on your environment and global Maven settings) will fail.
+1. We need to add a little bit more information about our application to the `pom.xml` file:
+    ```xml
+    ...
 
-```
-- try to compile
-```
-mvn compile
-```
-- add dependency
-```xml
+        <build>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.1</version>
+                </plugin>
+            </plugins>
+        </build>
+
     ...
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.9</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+    ```
+1. Now let's try to run the tests against our application:
+    ```
+    mvn test
+    ```
+    It will fail due to a missing dependency. Let's add it:
+    ```xml
     ...
-```
-- run tests and pass
-```
-mvn test
-```
-- create a `.jar` file using Maven
-```
-mvn package
-```
-- try to run the app
-```
-"%JAVA_HOME%"\bin\java -jar target\maven-demo-1.0-SNAPSHOT.jar
-```
-- add another plugin
-```xml
+
+        <dependencies>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-engine</artifactId>
+                <version>5.7.1</version>
+                <scope>test</scope>
+            </dependency>
+        </dependencies>
+
+        <build>
+            <plugins>
+                ...
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.22.0</version>
+                    <configuration>
+                        <argLine>
+                            --illegal-access=permit
+                        </argLine>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>2.22.0</version>
+                    <configuration>
+                        <argLine>
+                            --illegal-access=permit
+                        </argLine>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </build>
+
     ...
-    <plugin>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>3.2.0</version>
-        <configuration>
-            <archive>
-                <manifest>
-                    <mainClass>com.wellsfargo.App</mainClass>
-                </manifest>
-            </archive>
-        </configuration>
-    </plugin>
+    ```
+    and let's run the tests again:
+    ```
+    mvn test
+    ```
+1. Now we can create an executable `.jar` file using Maven to run our application and see the output:
+    ```
+    mvn package
+    ```
+    and try to run the app:
+    ```
+    java -jar target\maven-demo-1.0-SNAPSHOT.jar
+    ```
+    Although there is no error, the app will not actually run because when Maven packages it, it doesn't have enough information about the entrypoint. Let's provide it:
+    ```xml
     ...
-```
-- run the app
-```
-"%JAVA_HOME%"\bin\java -jar target\maven-demo-1-1.0-SNAPSHOT.jar
-```
+
+        <plugins>
+            ...
+            <plugin>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.wellsfargo.App</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+
+    ...
+    ```
+    When we run the app again, it should run successfully and print the following output:
+    ```
+
+    +=====================+
+    | Hello Maven Demo 1! |
+    +=====================+
+
+    ```
 
 ## Demo 2 - Automated
 
